build/testing/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: device-api
  namespace: testing
spec:
  selector:
    matchLabels:
      app: device-api
  template:
    metadata:
      labels:
        app: device-api
    spec:
      containers:
        - name: device-api
          image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/device-api/testing:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
            limits:
              memory: "2000Mi"
              cpu: "2"
